tests/style/dir_exclusions_nonlocal/expected_out.txt
In miss_hit.cfg, line 1
| exclude_dir: "foo/bar"
|              ^^^^^^^^^ error: must be a valid local directory
MISS_HIT Summary: 1 file(s) analysed, 1 error(s)
